src/build_only.txt
Failed to initialize Crashpad.  Crash reporting will not be available.  Cause: while locating crashpad handler: unable to locate crashpad handler executable
/mnt/c/PROJETOS/BIONIX/BIONIX-ML-VIVAZ/src/run_retina_train.mojo:1:1: error: unable to locate module 'stdlib'
import retina.retina_modelo as model_mod
^
/mnt/c/PROJETOS/BIONIX/BIONIX-ML-VIVAZ/src/run_retina_train.mojo:3:8: error: unable to locate module 'os'
import os
       ^
/mnt/c/PROJETOS/BIONIX/BIONIX-ML-VIVAZ/src/run_retina_train.mojo:6:1: error: 
    # ── Configuração do treino ──────────────────────────────────────────────
/mnt/c/PROJETOS/BIONIX/BIONIX-ML-VIVAZ/src/run_retina_train.mojo:5:4: error: unable to locate module 'builtin'
fn main() raises -> None:
   ^
/mnt/c/PROJETOS/BIONIX/BIONIX-ML-VIVAZ/src/run_retina_train.mojo:5:12: error: 
fn main() raises -> None:
           ^
/mnt/c/PROJETOS/BIONIX/BIONIX-ML-VIVAZ/src/run_retina_train.mojo:8:17: error: use of unknown declaration 'Int'
    var epocas: Int = 2         # número máximo de épocas (debug) - smoke test (reduced for debug)
/mnt/c/PROJETOS/BIONIX/BIONIX-ML-VIVAZ/src/run_retina_train.mojo:9:21: error: use of unknown declaration 'Bool'
    var early_stop: Bool = False    # para automaticamente ao convergir
                    ^~~~
/mnt/c/PROJETOS/BIONIX/BIONIX-ML-VIVAZ/src/run_retina_train.mojo:11:5: error: use of unknown declaration 'print'
    print("Iniciando treino RetinaFace... epocas=", epocas, " early_stop=", early_stop)
    ^~~~~
Included from /mnt/c/PROJETOS/BIONIX/BIONIX-ML-VIVAZ/src/run_retina_train.mojo:1:
/mnt/c/PROJETOS/BIONIX/BIONIX-ML-VIVAZ/src/retina/retina_modelo.mojo:26:34: error: use of unknown declaration 'Movable'
struct BlocoRetinaFaceParametros(Movable, Copyable):
                                 ^~~~~~~
Included from /mnt/c/PROJETOS/BIONIX/BIONIX-ML-VIVAZ/src/run_retina_train.mojo:1:
/mnt/c/PROJETOS/BIONIX/BIONIX-ML-VIVAZ/src/retina/retina_modelo.mojo:58:19: error: use of unknown declaration 'Movable'
struct RetinaFace(Movable):
                  ^~~~~~~
/mnt/c/PROJETOS/BIONIX/BIONIX-ML-VIVAZ/src/run_retina_train.mojo:23:9: error: use of unknown declaration 'print'
        print("[DEBUG] Forced usar_conv_fpn=False for debug training")
        ^~~~~
/mnt/c/PROJETOS/BIONIX/BIONIX-ML-VIVAZ/src/run_retina_train.mojo:28:19: error: use of unknown declaration 'List'
    var allowed = List[String]()
                  ^~~~
/mnt/c/PROJETOS/BIONIX/BIONIX-ML-VIVAZ/src/run_retina_train.mojo:31:5: error: use of unknown declaration 'print'
    print("Treino finalizado:", result)
    ^~~~~
/mnt/c/PROJETOS/BIONIX/BIONIX-ML-VIVAZ/src/.pixi/envs/default/bin/mojo: error: failed to parse the provided Mojo source module
